--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -10,6 +10,8 @@ jobs:
         run: |
           sudo apt install protobuf-compiler 
           go install github.com/golang/protobuf/protoc-gen-go@latest
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: build-proto
         run: make proto
   go-test:
